--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ config.py
 .vscode/settings.json
 __pycache__/config.cpython-39.pyc
 __pycache__/reddit_config.cpython-39.pyc
+script/__pycache__/config.cpython-39.pyc
